<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding"
    android:background="@drawable/barralineas">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSaveChanges"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/transparente">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparente"
            android:orientation="vertical">



            <TextView
                android:id="@+id/tvUname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/nombreusuario"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/etUname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxEms="20"
                android:hint="@string/hint_nombreusuario"
                android:singleLine="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tvProfileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/profile_image"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/profile_image"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_contact_picture"
                android:adjustViewBounds="true"/>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button_save_changes"/>

</RelativeLayout>